# tableflow-manual-sync-to-unity-catalog

./: .gitignore  BEST_PRACTICES.md  CLAUDE.md  README.md  pyproject.toml  sync.py  sync_tags.py
catalog_sync/: config.py  engine.py  handler.py  models.py
catalog_sync/sources/: base.py  confluent_cloud.py  glue.py  iceberg_rest.py  s3_discovery.py
catalog_sync/targets/: base.py  unity_catalog.py
demo/: producer.py  requirements.txt
demo/schemas/: customers.avsc  orders.avsc
docs/: future-iterations.md
docs/extending/: add-catalog-target.md  add-cloud-provider.md  architecture-overview.md  best-practices.md
docs/plans/: 2026-03-02-tableflow-catalog-sync-design.md  2026-03-02-tableflow-catalog-sync-implementation.md
schemas/avro/: customers.avsc  orders.avsc
scripts/: add-topic.sh  build_lambda.sh  cleanup-topics.sh  create-topics.sh  debug-sync.py  debug-tableflow.sh  delete-topics.py  delete-topics.sh  produce.py  setup-topics.sh
terraform/aws/: eventbridge.tf  lambda.tf  outputs.tf  secrets.tf  variables.tf  vpc.tf
terraform/confluent-cloud/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/demo/: main.tf  outputs.tf  terraform.tfstate.1772572621.backup  terraform.tfvars.example  variables.tf
tests/unit/: test_config.py  test_engine.py  test_handler.py  test_models.py  test_source_base.py  test_source_confluent_cloud.py  test_source_glue.py  test_source_iceberg_rest.py  test_source_s3_discovery.py  test_tag_sync.py  test_target_base.py  test_target_unity_catalog.py
(+1 files in other folders)
