[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalog-sync"
version = "0.1.0"
description = "Sync Tableflow catalog metadata (Delta Lake and Iceberg) into Databricks Unity Catalog over private networks"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.30.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.setuptools.packages.find]
include = ["catalog_sync*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
